# koba

./: README.md  pyproject.toml  setup.py  test.py
.github/workflows/: pyinstaller.yml  pypi.yml  python-package.yml
koba/: __init__.py  __main__.py  font.py  main.py
koba/core/: _unify_optim.pyx  _unify_shared.py  charsets.py  core.py  font.py  render.py  similarity.py  unify.py
tests/: test_charsets.py  test_font.py  test_main.py  test_unify.py
